# mapmap_cpu

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: master.yml  tipi.yml
.tipi/: deps  opts
cmake/: LICENSE.txt
demo/: mapmap_benchmark.cc  mapmap_demo.cc
download_example/: CMakeLists.txt
mapmap/: full.h
mapmap/header/: color.h  cost_bundle.h  costs.h  defines.h  dynamic_programming.h  graph.h  instance_factory.h  lock_free_tree_sampler.h  mapmap.h  multilevel.h  optimistic_tree_sampler.h  parallel_templates.h  settings.h  termination_criterion.h  timer.h  tree.h  tree_optimizer.h  tree_sampler.h  vector_math.h  vector_types.h
mapmap/header/cost_instances/: pairwise_antipotts.h  pairwise_linear_peak.h  pairwise_potts.h  pairwise_table.h  pairwise_truncated_linear.h  pairwise_truncated_quadratic.h  unary_table.h
mapmap/header/multilevel_instances/: group_same_label.h
mapmap/header/optimizer_instances/: dp_node.h  dp_node_solver.h  dp_node_solver_factory.h  dynamic_programming.h  envelope.h
mapmap/header/optimizer_instances/envelope_instances/: pairwise_antipotts_envelope.h  pairwise_linear_peak_envelope.h  pairwise_potts_envelope.h  pairwise_truncated_linear_envelope.h  pairwise_truncated_quadratic_envelope.h
mapmap/header/termination_instances/: stop_after_iterations.h  stop_after_time.h  stop_when_flat.h  stop_when_returns_diminish.h
mapmap/header/tree_sampler_instances/: lock_free_tree_sampler.h  optimistic_tree_sampler.h
mapmap/source/: color.impl.h  cost_bundle.impl.h  costs.impl.h  dynamic_programming.impl.h  graph.impl.h  instance_factory.impl.h  lock_free_tree_sampler.impl.h  mapmap.impl.h  multilevel.impl.h  optimistic_tree_sampler.impl.h  parallel_templates.impl.h  termination_criterion.impl.h  timer.impl.h  tree.impl.h  tree_optimizer.impl.h  tree_sampler.impl.h  vector_math.impl.h
mapmap/source/cost_instances/: pairwise_antipotts.impl.h  pairwise_linear_peak.impl.h  pairwise_potts.impl.h  pairwise_table.impl.h  pairwise_truncated_linear.impl.h  pairwise_truncated_quadratic.impl.h  unary_table.impl.h
mapmap/source/multilevel_instances/: group_same_label.impl.h
mapmap/source/optimizer_instances/: dp_node_solver.impl.h  dp_node_solver_factory.impl.h  dynamic_programming.impl.h
mapmap/source/optimizer_instances/envelope_instances/: pairwise_antipotts_envelope.impl.h  pairwise_linear_peak_envelope.impl.h  pairwise_potts_envelope.impl.h  pairwise_truncated_linear_envelope.impl.h  pairwise_truncated_quadratic_envelope.impl.h
mapmap/source/termination_instances/: stop_after_iterations.impl.h  stop_after_time.impl.h  stop_when_flat.impl.h  stop_when_returns_diminish.impl.h
mapmap/source/tree_sampler_instances/: lock_free_tree_sampler.impl.h  optimistic_tree_sampler.impl.h
test/: test_coloring.cc  test_coordinate_set.cc  test_dynamic_programming.cc  test_envelope.cc  test_graph.cc  test_multilevel.cc  test_spanning_tree.cc  test_vector_math.cc  util_test.h  util_test.impl.h
